docs: updated index.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <p>Prettier is an opinionated code formatter. It enforces a consistent style by parsing your code and
                 re-printing it with its own rules that take the maximum line length into account, wrapping code when
                 necessary. <b><em>Prettier Extension</em></b> currently supports JavaScript, JavaScriptReact,
-                TypeScript, TypeScriptReact, JSON, GraphQL
+                TypeScript, TypeScriptReact, JSON, GraphQL.
             </p>
             <h2>4) Auto Rename Tag</h2>
             <h3><i>By Jun Han</i></h3>
@@ -51,7 +51,7 @@
             <h2>5) Cobalt Next</h2>
             <h3><i>By David Leininger</i></h3>
             <p>Well, the last one is completely personal. It is a theme extension that I feel reduces the strain on my
-                eyes throughout the long coding sessions and it's not either too dark or too light. If Oceanic Next and
+                eyes throughout the long coding sessions and it's not either too dark or too light.<b><em>Cobalt Next</em></b> is like if Oceanic Next and
                 Cobalt2 made a baby in the form of a theme for VSCode.</p>
         </div>
     </section>
