style : updated responsiveness

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             development process.</p>
         <p>I personally haven't tried any other IDE as I am a big fan of Visual Studio. However, there are various
             IDE's available like Sublime Text, Atom, Android Studio, Eclipse, etc.</p>
-        <div class="container-extensions">
+        <div class="container bg">
             <h1>My Favourite Extensions</h1>
             <h2>1) Live Server</h2>
             <h3><i>By Ritwick Dey</i></h3>
