style : Header added

--- a/index.html
+++ b/index.html
@@ -5,11 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
     <title>VS Code Extensions</title>
 </head>
 
 <body>
+    <nav class="primary-header">
+        <!-- <img src=""> -->
+        <h1>SS</h1>
+        <div class="nav-links">
+            <ul>
+                <li><a href="https://sibtain.netlify.app/blog.html">&lt/Blogs&gt</a></li>
+                <li><a href="https://sibtain.netlify.app/">&lt/Portfolio&gt</a></li>
+            </ul>
+        </div>
+    </nav>
     <header class="header">
         <h1>5 Amazing Visual Studio Code Extensions I Use</h1>
     </header>
@@ -51,13 +62,17 @@
             <h2>5) Cobalt Next</h2>
             <h3><i>By David Leininger</i></h3>
             <p>Well, the last one is completely personal. It is a theme extension that I feel reduces the strain on my
-                eyes throughout the long coding sessions and it's not either too dark or too light. <b><em>Cobalt Next</em></b> is like if Oceanic Next and
+                eyes throughout the long coding sessions and it's not either too dark or too light. <b><em>Cobalt
+                        Next</em></b> is like if Oceanic Next and
                 Cobalt2 made a baby in the form of a theme for VSCode.</p>
         </div>
     </section>
-    <footer class="footer">
-        <h1>Thank you for reading</h1>
-        <p>Made by Syed Sibtain</p>
+    <footer class="primary-footer">
+        <div class="icon">
+            <a href="https://github.com/SyedSibtainRazvi"><i class="fa fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/syed-sibtain-razvi-919669150/"><i class="fa fa-linkedin"></i></a>
+            <a href="https://twitter.com/SyedSibtain1996"><i class="fa fa-twitter"></i></a>
+        </div>
     </footer>
 </body>
 
