--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 
 <body>
     <nav class="primary-header">
-        <!-- <img src=""> -->
-        <h1>SS</h1>
+        <img src="/assets/Logo.png" width="140px" height="auto">
         <div class="nav-links">
             <ul>
                 <li><a href="https://sibtain.netlify.app/blog.html">&lt/Blogs&gt</a></li>
